--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.5.2",
     "concurrently": "^9.2.1",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "express": "^5.1.0",
     "lodash": "^4.17.21"
   }
 }
